Поправил логику обработки параметров командной строки: теперь бин создаётся только когда это действительно требуется, экономя тем самым ресурсы на своё создание, если это не требуется. Добавил вывод справки по валидному использованию программы.